# itrails

./: .gitignore  .readthedocs.yaml  README.md  cut_times.py  environment.yaml  pyproject.toml  trans_mat.py
.github/workflows/: docs.yml  pypi-release.yml  testpypi-release.yml
conda/: conda_build_config.yaml
conda/recipe/: meta.yaml
docs/: api.rst  cli_optm.rst  cli_post.rst  cli_vit.rst  conf.py  index.rst  parameterization.rst
docs/_static/: custom.css  rtd_version.js
docs/modules/: combine_states.rst  cutpoints.rst  deepest_ti.rst  expm.rst  get_emission_prob_mat.rst  get_joint_prob_mat.rst  get_tab.rst  get_trans_emiss.rst  helper_omegas.rst  int_combine_states.rst  int_get_emission_prob_mat.rst  int_get_joint_prob_mat.rst  int_get_ordered.rst  int_get_tab.rst  int_get_times.rst  int_get_trans_emiss.rst  int_load_trans_mat.rst  int_optimizer.rst  int_shared_data.rst  int_vanloan.rst  ncpu.rst  optimizer.rst  read_data.rst  run_markov_chain_AB.rst  run_markov_chain_ABC.rst  trans_mat.rst  vanloan.rst  workflow_int_optimize.rst  workflow_int_posterior.rst  workflow_int_viterbi.rst  workflow_optimize.rst  workflow_posterior.rst  workflow_print_example.rst  workflow_viterbi.rst  yaml_helpers.rst
docs/source/: itrails.rst  modules.rst
src/: combine_states.py  create_list.py  cut_times.py  deep_identify.py  deep_identify_old.py  deepest_ti.py  expm.py  get_joint.py  get_joint_new.py  get_joint_old.py  new.txt  new_calling.py  old.txt  remove_absorbing.py  run_mc.py  run_mc_numba.py  run_mc_old.py  run_mc_ray.py  tmp.py  trans_mat.py  vanloan.py  vanloan_identify copy.py  vanloan_identify.py  vanloan_old.py
src/TRAILS/: combine_omegas.py  combine_states.py  deep_identify.py  deepest_ti.py  expm.py  get_emission_prob_mat.py  get_joint.py  get_joint_prob_mat.py  helper_omegas.py  optimizer.py  remove_absorbing.py  run_markov_chain.py  run_mc.py  test.py  trans_mat.py  vanloan.py  vanloan_identify.py
src/iTRAILS/: combine_states.py  deepest_ti.py  get_joint_prob_mat.py
src/itrails/: __init__.py  combine_states.py  cutpoints.py  deepest_ti.py  expm.py  get_emission_prob_mat.py  get_joint_prob_mat.py  get_tab.py  get_trans_emiss.py  helper_omegas.py  helper_validation.py  int_combine_states.py  int_get_emission_prob_mat.py  int_get_joint_prob_mat.py  int_get_ordered.py  int_get_tab.py  int_get_times.py  int_get_trans_emiss.py  int_load_trans_mat.py  int_optimizer.py  int_shared_data.py  int_vanloan.py  ncpu.py  optimizer.py  (+15 more)
(+6 files in other folders)
