[build-system]
requires = ["setuptools", "setuptools-scm", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "itrails"
dynamic = ["version"]
description = "Tree reconstruction of ancestry using incomplete lineage sorting"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    
    {name = "David Martin-Pestana", email = "dmape@birc.au.dk"}
]
maintainers = [
    {name = "Iker Rivas-González", email = "iker_rivas_gonzalez@eva.mpg.de"},
    {name = "David Martin-Pestana", email = "dmape@birc.au.dk"}
]
requires-python = ">=3.6"
dependencies = [
    "numpy",
    "scipy",
    "ray",
    "numba",
    "biopython"
]

[project.urls]
Homepage = "https://github.com/trails-phylogeny/itrails"
BugTracker = "https://github.com/trails-phylogeny/itrails/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]

[project.scripts]
itrails-optimize = "TRAILS.workflow_optimize:main"
